examples/terraform/aws/security-group.tf
# Security Groups:

resource "aws_security_group" "instances" {
  name        = "${var.deployment}-instances"
  description = "Default Security Group for instances"
  vpc_id      = "${local.vpc_id}"

  # Inbound SSH from anywhere
  ingress {
    from_port   = "22"
    to_port     = "22"
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = "24864"
    to_port     = "24864"
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"
    self      = true
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  timeouts {
    delete = "1h"
  }
}
